--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -41,15 +41,30 @@ li {
   margin-bottom: 15px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   display: flex;
+  /* flex-direction: row; */
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
 
+.btns {
+  /* display: inline; */
+  margin: 5px;
+  margin-left: 15px;
+}
+li{
+  display: block;
+}
+/* btns{
+  margin: 5px;
+} */
+
 /* Note content */
 li strong {
+  display: block;
   color: #333;
   font-size: 18px;
+  margin: 10px;
 }
 
 /* Edit & Delete buttons */
