--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -59,7 +59,7 @@
             <button type="submit" class="btn">Sign Up</button>
         </form>
 
-        <Already href="/login" class="already">Already have an account? signup</a> 
+        <a href="/login" class="already">Already have an account? login</a> 
         
     </div>
 </body>
